fix broken link to architecture diagram

--- a/docs/tutorials/deploy-marlowe-runtime.mdx
+++ b/docs/tutorials/deploy-marlowe-runtime.mdx
@@ -3,7 +3,7 @@ title: Deploy Marlowe Runtime
 sidebar_position: 1
 ---
 
-In this tutorial, you will deploy Marlowe Runtime with Docker in a Nix environment. Nix will provide a turn-key way to run all the services shown in this [architecture diagram](./docs/architecture).
+In this tutorial, you will deploy Marlowe Runtime with Docker in a Nix environment. Nix will provide a turn-key way to run all the services shown in this [architecture diagram](docs/architecture.md).
 
 ## Prerequisites
 
