Add icons and plural language

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -7,13 +7,19 @@ hide_table_of_contents: true
 
 import Link from '@docusaurus/Link';
 import ArrowRight from '@site/static/icons/arrow_right.svg';
+import Brain from '@site/static/icons/brain.svg';
+import Book from '@site/static/icons/book.svg';
+import Cube from '@site/static/icons/cube.svg';
+import Puzzle from '@site/static/icons/puzzle.svg';
+import Scroll from '@site/static/icons/scroll.svg';
+import Tool from '@site/static/icons/tools.svg';
 
 # Marlowe Documentation
 
 <div className="gallery">
   <div className="sub-heading">
     <div className="front-matter">
-      <p>Marlowe is an ecoystem of tools and language to enable development of financial and transacational contracts. Formal proofs, extensive testing, and analysis tools provide strong assurances for the safety of Marlowe contracts. Develop with its full suite of tooling that supports all skill levels, for both the community and enterprises.
+      <p>Marlowe is an ecoystem of tools and languages to enable development of financial and transacational contracts. Formal proofs, extensive testing, and analysis tools provide strong assurances for the safety of Marlowe contracts. Develop with its full suite of tooling that supports all skill levels, for both the community and enterprises.
       <br />
       <br />
       A Marlowe contract is built by combining a small number of building blocks that describe making a payment, making an observation of something in the "real world," waiting until a certain condition becomes true, and other similar types of concepts.
@@ -31,6 +37,7 @@ import ArrowRight from '@site/static/icons/arrow_right.svg';
   </div>
   <div className="card">
     <div className="card-header">
+      <Puzzle />
       <h4>Infrastructure</h4>
     </div>
     <p>Learn about the different components of Marlowe for deploying smart contracts in testnet and mainnet</p>
@@ -40,6 +47,7 @@ import ArrowRight from '@site/static/icons/arrow_right.svg';
   </div>
     <div className="card">
     <div className="card-header">
+      <Tool />
       <h4>Tools</h4>
     </div>
     <p>Use provided tools such as the CLI and REST API for simplified workflows</p>
@@ -49,6 +57,7 @@ import ArrowRight from '@site/static/icons/arrow_right.svg';
   </div>
     <div className="card">
     <div className="card-header">
+      <Scroll />
       <h4>Smart Contract Language</h4>
     </div>
     <p>Read about Marlowe as a language to provide powerful abstractions to build faster</p>
@@ -58,6 +67,7 @@ import ArrowRight from '@site/static/icons/arrow_right.svg';
   </div>
     <div className="card">
     <div className="card-header">
+      <Brain />
       <h4>Playground</h4>
     </div>
     <p>Explore how to write smart contracts directly in a browser</p>
@@ -67,6 +77,7 @@ import ArrowRight from '@site/static/icons/arrow_right.svg';
   </div>
     <div className="card">
     <div className="card-header">
+    <Cube />
       <h4>Blockly</h4>
     </div>
     <p>Visually design smart contracts with a drag and drop interface</p>
@@ -76,6 +87,7 @@ import ArrowRight from '@site/static/icons/arrow_right.svg';
   </div>
     <div className="card">
     <div className="card-header">
+      <Book />
       <h4>API Reference</h4>
     </div>
     <p>Learn how to work with Marlowe on a lower level through the command line</p>
