cleaning up some outdated formatting artifacts, deleted obsolete version of runtime protocol api reference page

--- a/docs/examples/examples-contract-gallery.mdx
+++ b/docs/examples/examples-contract-gallery.mdx
@@ -9,7 +9,7 @@ import Gallery from '@site/src/components/Gallery';
 
 ## Example contracts on Cardano mainnet
 
-If you want some inspiration and would like to get an idea of the variety of Marlowe contracts we have already run on mainnet, please browse through the examples accessed through the linked image above or through the links listed below. The contract gallery contains a mixture of various Marlowe contract use cases that have already been executed successfully on mainnet. 
+If you want some inspiration and would like to get an idea of the variety of Marlowe contracts we have already run on mainnet, please browse through the examples accessed through the linked images above or through the links listed below. The contract gallery contains a mixture of various Marlowe contract use cases that have already been executed successfully on mainnet. 
 
 Each tile in the gallery above corresponds to a [Jupyter (.ipynb) notebook file](https://jupyter-notebook.readthedocs.io/en/stable/.). Jupyter notebook files can be viewed in a web browser and use a format that supports an interactive computational environment combining code, text and images. 
 
