Migrate links, assets, and spelling

--- a/tutorials/guides/overview.mdx
+++ b/tutorials/guides/overview.mdx
@@ -2,3 +2,7 @@
 title: "Overview"
 sidebar_position: 0
 ---
+
+The guides in this section are meant to be consumed in order. They are content found in the [Marlowe Starter Kit](https://github.com/input-output-hk/marlowe-starter-kit). Some familiarity with [Jupyter notebooks](https://jupyter.org/) are recommended, but the steps can be done in a terminal.
+
+Each guide will go through prerequisite steps for setting up a development environment with addesses representing entities of a financial transaction.
