Remove key folder references

--- a/tutorials/playbooks/deploy-marlowe-runtime.mdx
+++ b/tutorials/playbooks/deploy-marlowe-runtime.mdx
@@ -10,7 +10,7 @@ To follow this tutorial, you need to:
  * Have a single or multi-user installation of nix
  * Working installation of [Docker](https://docs.docker.com/engine/install/)
 
-## Configure Binary Caches
+## Configure binary caches
 
 import Configure from '../_partials/_configure-binary-caches.mdx';
 
