--- a/tutorials/videos.mdx
+++ b/tutorials/videos.mdx
@@ -80,7 +80,7 @@ This last video, *Running Marlowe Contracts with the Marlowe Backend, optional*,
 | [PPP 030905 - Marlowe Playground Demo](https://youtu.be/l0LXjh8J-go) | Lars Brünjes | Mar 2022 | 
 | [PPP 030906 - Homework](https://youtu.be/iYdyUaq_enA) | Lars Brünjes | Mar 2022 | 
 
-## Marlowe Webinar
+## Marlowe webinar
 
 | Video Title | Presenter | Date |
 |-------------|-----------|-------------|
@@ -116,7 +116,7 @@ A set of videos that introduce Marlowe, a domain-specific language for financial
 | [Marlowe 20: Looking forward](https://youtu.be/80eJM2EdAqk) | Simon Thompson | Apr 2020 | 
 
 
-## Marlowe Playground Tutorials
+## Marlowe Playground tutorials
 
 | Video Title | Presenter | Date |
 |-------------|-----------|-------------|
@@ -128,7 +128,7 @@ A set of videos that introduce Marlowe, a domain-specific language for financial
 | [Marlowe Playground 3: Elaborating the contract](https://www.youtube.com/watch?v=DS_ebkGwmXw) | Simon Thompson | Apr 2020 | 
 | [Marlowe Playground 4: Choices and observations](https://www.youtube.com/watch?v=25fnB7C8mPE) | Simon Thompson | Apr 2020 | 
 
-## Miscellaneous Demonstrations of Marlowe Capabilities on Cardano
+## Miscellaneous demonstrations of Marlowe capabilities on Cardano
 
 | Video Title | Presenter | Date |
 |-------------|-----------|-------------|
