Update Marlowe Playground Links

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -65,7 +65,7 @@ import Tool from '@site/static/icons/tools.svg';
       <h4>Playground</h4>
     </div>
     <p>Explore how to write smart contracts directly in a browser</p>
-    <Link to="https://play.marlowe-finance.io/">
+    <Link to="https://play.marlowe.iohk.io/">
       Playground <ArrowRight className="arrow" />
     </Link>
   </div>
@@ -75,7 +75,7 @@ import Tool from '@site/static/icons/tools.svg';
       <h4>Blockly</h4>
     </div>
     <p>Visually design smart contracts with a drag and drop interface</p>
-    <Link to="https://play.marlowe-finance.io/#/blockly">
+    <Link to="https://play.marlowe.iohk.io/#/blockly">
       Blockly <ArrowRight className="arrow" />
     </Link>
   </div>
