--- a/tutorials/videos.mdx
+++ b/tutorials/videos.mdx
@@ -22,7 +22,7 @@ The videos listed below cover the full spectrum of topics related to Marlowe. So
 | [Why Marlowe](https://youtu.be/khyeRhYumJM) | Omer Husain | Jul 2022 | 
 | [Marlowe suite overview](https://youtu.be/Pxk-M0oBJMg) | Pablo Lamela | Jul 2022 | 
 | [**2. Using Marlowe**](https://www.youtube.com/playlist?list=PLNEK_Ejlx3x1o4Hv1GC_0kxXnquikXl70) | Lars Brünjes | Jul 2022 | 
-| [Introduction](https://www.youtube.com/playlist?list=PLNEK_Ejlx3x1o4Hv1GC_0kxXnquikXl70) | Lars Brünjes | Jul 2022 | 
+| [Introduction](https://youtu.be/qVnTMAxVS8w) | Lars Brünjes | Jul 2022 | 
 | [The EUTXO Model and Marlowe Contracts](https://youtu.be/5FrPxKEokBw) | Lars Brünjes | Jul 2022 | 
 | [Using Daedalus](https://youtu.be/OPDC-zNwyv4) | Lars Brünjes | Jul 2022 | 
 | [Marlowe Run (deprecated)](https://youtu.be/Yfiy7whWlMs) | Lars Brünjes | Jul 2022 | 
