addressing comments from Content Team except tutorials

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -14,12 +14,14 @@ import Puzzle from '@site/static/icons/puzzle.svg';
 import Scroll from '@site/static/icons/scroll.svg';
 import Tool from '@site/static/icons/tools.svg';
 
-# Marlowe Documentation
+# Marlowe documentation
 
 <div className="gallery">
   <div className="sub-heading">
     <div className="front-matter">
-      <p>Marlowe is an ecoystem of tools and languages to enable development of financial and transactional contracts. Formal proofs, extensive testing, and analysis tools provide strong assurances for the safety of Marlowe contracts. Develop with its full suite of tooling that supports all skill levels, for both the community and enterprises.
+      <p>Marlowe is an ecoystem of tools and languages to enable development of financial and transactional contracts. Formal proofs, extensive testing, and analysis tools provide strong assurances for the safety of Marlowe contracts. <br />
+      <br />
+      Marlowe includes a full suite of tooling to support all skill levels, for both the community and enterprises.
       <br />
       <br />
       A Marlowe contract is built by combining a small number of building blocks that describe making a payment, making an observation of something in the "real world," waiting until a certain condition becomes true, and other similar types of concepts.
@@ -27,7 +29,7 @@ import Tool from '@site/static/icons/tools.svg';
     </div>
   </div>
   <div className="sub-heading">
-    <h3>Popular Topics</h3>
+    <h3>Popular topics</h3>
   </div>
   <div className="card">
     <div className="card-header">
@@ -56,7 +58,7 @@ import Tool from '@site/static/icons/tools.svg';
     </div>
     <p>Read about Marlowe as a language to provide powerful abstractions to build faster</p>
     <Link to="platform-and-architecture/dsl">
-      Smart Contract Language <ArrowRight className="arrow" />
+      Smart contract language <ArrowRight className="arrow" />
     </Link>
   </div>
     <div className="card">
@@ -86,7 +88,7 @@ import Tool from '@site/static/icons/tools.svg';
     </div>
     <p>Learn how to work with Marlowe on a lower level through the command line</p>
     <Link to="/api/get-contracts">
-      API Reference <ArrowRight className="arrow" />
+      API reference <ArrowRight className="arrow" />
     </Link>
   </div>
 </div>
