fixed typo on intro

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -19,7 +19,7 @@ import Tool from '@site/static/icons/tools.svg';
 <div className="gallery">
   <div className="sub-heading">
     <div className="front-matter">
-      <p>Marlowe is an ecoystem of tools and languages to enable development of financial and transactional contracts. Formal proofs, extensive testing, and analysis tools provide strong assurances for the safety of Marlowe contracts. <br />
+      <p>Marlowe is an ecosystem of tools and languages to enable development of financial and transactional contracts. Formal proofs, extensive testing, and analysis tools provide strong assurances for the safety of Marlowe contracts. <br />
       <br />
       Marlowe includes a full suite of tooling to support all skill levels, for both the community and enterprises.
       <br />
