cleanup unused component

--- a/docs/examples/showcase.mdx
+++ b/docs/examples/showcase.mdx
@@ -5,7 +5,7 @@ hide_table_of_contents: true
 
 import GithubRepoCard from '@site/src/components/GithubRepoCard';
 
-Marlowe is open source! Community projects shapes the future of Marlowe.
+Marlowe is open source! Community projects shape the future of Marlowe. These resources represent notes or examples from the community.
 
 ### Github
 
