--- a/tutorials/guides/escrow-rest.mdx
+++ b/tutorials/guides/escrow-rest.mdx
@@ -74,7 +74,7 @@ The flow chart below shows the possible execution paths of the escrow contract. 
 
 ## Preliminaries
 
-See [Preliminaries](preliminaries.md) for information on setting up one's environment for using this tutorial.
+See [Preliminaries](preliminaries.mdx) for information on setting up one's environment for using this tutorial.
 
 The lesson assumes that the following environment variables have been set.
 - `CARDANO_NODE_SOCKET_PATH`: location of Cardano node's socket.
@@ -96,6 +96,10 @@ It also assumes that the parties have addresses, signing keys, and funds.
 ### Access to Cardano node and Marlowe Runtime
 
 If we're using [demeter.run](https://demeter.run/)'s Cardano Marlowe Runtime extension, then we already have access to Cardano Node and Marlowe Runtime. The following commands will set the required environment variables to use a local docker deployment on the default ports. It will also set some supplementary environment variables.
+
+import SyncStatus from '../_partials/_check-sync-status.mdx';
+
+<SyncStatus />
 
 
 ```bash
@@ -159,7 +163,7 @@ Note the test network magic number:
 
 ### Seller address and funds
 
-Check that an address and key has been created for the seller. If not, see "Creating Addresses and Signing Keys" in [Preliminaries](preliminaries.md).
+Check that an address and key has been created for the seller. If not, see "Creating Addresses and Signing Keys" in [Preliminaries](preliminaries.mdx).
 
 
 ```bash
@@ -195,7 +199,7 @@ echo "$EXPLORER_URL"/address/"$SELLER_ADDR"
 
 ### Buyer address and funds
 
-Check that an address and key has been created for the buyer. If not, see "Creating Addresses and Signing Keys" in [Preliminaries](preliminaries.md).
+Check that an address and key has been created for the buyer. If not, see "Creating Addresses and Signing Keys" in [Preliminaries](preliminaries.mdx).
 
 
 ```bash
@@ -231,7 +235,7 @@ echo "$EXPLORER_URL"/address/"$BUYER_ADDR"
 
 ### Mediator address and funds
 
-Check that an address and key has been created for the mediator. If not, see "Creating Addresses and Signing Keys" in [Preliminaries](preliminaries.md).
+Check that an address and key has been created for the mediator. If not, see "Creating Addresses and Signing Keys" in [Preliminaries](preliminaries.mdx).
 
 
 ```bash
@@ -532,7 +536,7 @@ Here are the steps for checking the safety of a contract:
 6. Use [Marlowe CLI\'s](https://github.com/input-output-hk/marlowe-cardano/blob/main/marlowe-cli/ReadMe.md) `marlowe-cli run analyze` tool to study whether the contract can run on a Cardano network.
 7. Run *all execution paths* of the contract on a [Cardano testnet](https://docs.cardano.org/cardano-testnet/overview).
 
-See [Lesson 1](runtime-cli.md) for an example of performing step 6.
+See [Lesson 1](runtime-cli.mdx) for an example of performing step 6.
 
 ## Transaction 1: Mediator Creates Escrow Contract with Initial ADA
 
