renamed Examples section to Getting started, added a page describing deployment options

--- a/docs/getting-started/explorer.mdx
+++ b/docs/getting-started/explorer.mdx
@@ -1,9 +1,10 @@
 ---
 title: Marlowe Explorer
+sidebar_position: 4
 hide_table_of_contents: true
 ---
 
-Explorers are useful tools to visually represent transactions on a blockchain. Since Cardano can have many transactions which can be hard to filter, Marlowe also has an [open source explorer](https://github.com/input-output-hk/marlowe-explorer) used to view Marlowe contracts.
+Explorers are useful tools to visually represent transactions on a blockchain. Since Cardano can have many transactions which can be hard to filter, Marlowe also has an **[open source explorer](https://github.com/input-output-hk/marlowe-explorer)** used to view Marlowe contracts.
 
 import Link from '@docusaurus/Link';
 import ArrowRight from '@site/static/icons/arrow_right.svg';
