--- a/docs/getting-started/examples-contract-gallery.mdx
+++ b/docs/getting-started/examples-contract-gallery.mdx
@@ -1,7 +1,8 @@
 ---
 title: Contract gallery
-sidebar_position: 3
+sidebar_position: 4
 hide_table_of_contents: true
+slug: /docs/examples/examples-contract-gallery
 ---
 
 import Gallery from '@site/src/components/Gallery';
