--- a/docs/getting-started/explorer.mdx
+++ b/docs/getting-started/explorer.mdx
@@ -1,9 +1,12 @@
 ---
 title: Marlowe Explorer
+sidebar_position: 5
 hide_table_of_contents: true
 ---
 
-Explorers are useful tools to visually represent transactions on a blockchain. Since Cardano can have many transactions which can be hard to filter, Marlowe also has an [open source explorer](https://github.com/input-output-hk/marlowe-explorer) used to view Marlowe contracts.
+Explorers are useful tools to visually represent transactions on a blockchain. Since Cardano can have many transactions which can be hard to filter, Marlowe also has an **[open source explorer](https://github.com/input-output-hk/marlowe-explorer)** used to view Marlowe contracts. 
+
+Visit **[Marlowe Explorer](https://marlowescan.com/)** to see this explorer in action, or use the links below: 
 
 import Link from '@docusaurus/Link';
 import ArrowRight from '@site/static/icons/arrow_right.svg';
