--- a/tutorials/playbooks/deploying-marlowe-runtime.mdx
+++ b/tutorials/playbooks/deploying-marlowe-runtime.mdx
@@ -1,5 +1,5 @@
 ---
-title: Deploy Marlowe Runtime
+title: Deploying Marlowe Runtime
 ---
 
 In this tutorial, you will deploy Marlowe Runtime with Docker in a Nix environment.
