--- a/docs/getting-started/explorer.mdx
+++ b/docs/getting-started/explorer.mdx
@@ -8,35 +8,6 @@ Explorers are useful tools to visually represent transactions on a blockchain. S
 
 Visit **[Marlowe Explorer](https://marlowescan.com/)** to see this explorer in action, or use the links below: 
 
-import Link from '@docusaurus/Link';
-import ArrowRight from '@site/static/icons/arrow_right.svg';
+import Explorer from '@site/src/components/Explorer';
 
-<div className="gallery">
-  <div className="card">
-    <div className="card-header">
-      <h4>Preview</h4>
-    </div>
-    <p>Preview Network Scanner.</p>
-    <Link to="https://preview.marlowescan.com/">
-      Open <ArrowRight className="arrow" />
-    </Link>
-  </div>
-    <div className="card">
-    <div className="card-header">
-      <h4>Preprod</h4>
-    </div>
-    <p>PreProd Network Scanner.</p>
-    <Link to="https://preprod.marlowescan.com/">
-      Open <ArrowRight className="arrow" />
-    </Link>
-  </div>
-    <div className="card">
-    <div className="card-header">
-      <h4>Mainnet</h4>
-    </div>
-    <p>Mainnet Network Scanner.</p>
-    <Link to="https://mainnet.marlowescan.com/">
-      Open <ArrowRight className="arrow" />
-    </Link>
-  </div>
-</div>
+<Explorer />
