Move gallery from svg to card design

--- a/docs/getting-started/contract-gallery.mdx
+++ b/docs/getting-started/contract-gallery.mdx
@@ -6,7 +6,21 @@ hide_table_of_contents: true
 
 import Gallery from '@site/src/components/Gallery';
 
-<Gallery />
+## NFT contracts
+
+<Gallery type="nft" />
+
+## Finance contracts
+
+<Gallery type="finance" />
+
+## Miscellaneous
+
+<Gallery type="misc" />
+
+## First-of-kind on mainnet
+
+<Gallery type="first" />
 
 ## Example contracts on Cardano mainnet
 
