--- a/tutorials/playbooks/deploying-marlowe-runtime.mdx
+++ b/tutorials/playbooks/deploying-marlowe-runtime.mdx
@@ -53,11 +53,11 @@ services:
       retries: 10
       test: socat -u OPEN:/dev/null UNIX-CONNECT:/ipc/node.socket
       timeout: 5s
-    image: inputoutput/cardano-node:1.35.4
+    image: inputoutput/cardano-node:8.1.2
     restart: unless-stopped
     volumes:
     - shared:/ipc
-    - node-db:/opt/cardano/data
+    - node-db:/data
 
   postgres:
     environment:
@@ -79,7 +79,26 @@ services:
     restart: unless-stopped
     volumes:
     - postgres:/var/lib/postgresql/data
-    - ./${NETWORK:?err}/init.sql:/docker-entrypoint-initdb.d/init.sql
+    - ./networks/${NETWORK:?err}/init.sql:/docker-entrypoint-initdb.d/init.sql
+    command:
+      - '-c'
+      - 'max_connections=1000'
+      - '-c'
+      - 'superuser_reserved_connections=5'
+      - '-c'
+      - 'huge_pages=try'
+      - '-c'
+      - 'max_wal_size=6GB'
+      - '-c'
+      - 'max_locks_per_transaction=256'
+      - '-c'
+      - 'max_pred_locks_per_transaction=256'
+      - '-c'
+      - 'work_mem=32MB'
+      - '-c'
+      - 'maintenance_work_mem=256MB'
+    ports:
+    - 5432:5432
 
   chain-indexer:
     environment:
@@ -95,12 +114,12 @@ services:
         condition: service_healthy
       postgres:
         condition: service_healthy
-    image: ghcr.io/input-output-hk/marlowe-chain-indexer:0.0.1
+    image: ghcr.io/input-output-hk/marlowe-chain-indexer:0.0.5
     user: 0:0
     restart: unless-stopped
     volumes:
     - shared:/ipc
-    - ./${NETWORK:?err}/node:/node
+    - ./networks/${NETWORK:?err}/node:/node
 
   chain-sync:
     environment:
@@ -120,12 +139,12 @@ services:
         condition: service_started
       postgres:
         condition: service_healthy
-    image: ghcr.io/input-output-hk/marlowe-chain-sync:0.0.1
+    image: ghcr.io/input-output-hk/marlowe-chain-sync:0.0.5
     user: 0:0
     restart: unless-stopped
     volumes:
     - shared:/ipc
-    - ./${NETWORK:?err}/node:/node
+    - ./networks/${NETWORK:?err}/node:/node
 
   indexer:
     environment:
@@ -143,7 +162,7 @@ services:
         condition: service_started
       postgres:
         condition: service_healthy
-    image: ghcr.io/input-output-hk/marlowe-indexer:0.0.1
+    image: ghcr.io/input-output-hk/marlowe-indexer:0.0.5
     restart: unless-stopped
 
   sync:
@@ -153,6 +172,8 @@ services:
     - MARLOWE_HEADER_SYNC_PORT=3725
     - MARLOWE_QUERY_PORT=3726
     - DB_NAME=chain_${NETWORK:?err}
+    - MARLOWE_CHAIN_SYNC_HOST=chain-sync
+    - MARLOWE_CHAIN_SYNC_QUERY_PORT=3716
     - DB_USER=postgres
     - DB_PASS=postgres
     - DB_HOST=postgres
@@ -162,7 +183,7 @@ services:
         condition: service_started
       postgres:
         condition: service_healthy
-    image: ghcr.io/input-output-hk/marlowe-sync:0.0.1
+    image: ghcr.io/input-output-hk/marlowe-sync:0.0.5
     restart: unless-stopped
 
   tx:
@@ -173,18 +194,39 @@ services:
     - MARLOWE_CHAIN_SYNC_PORT=3715
     - MARLOWE_CHAIN_SYNC_QUERY_PORT=3716
     - MARLOWE_CHAIN_SYNC_COMMAND_PORT=3720
+    - CONTRACT_HOST=contract
+    - CONTRACT_QUERY_PORT=3728
     - HTTP_PORT=3785
     depends_on:
       - chain-sync
-    image: ghcr.io/input-output-hk/marlowe-tx:0.0.1
+      - contract
+    image: ghcr.io/input-output-hk/marlowe-tx:0.0.5
+    restart: unless-stopped
+
+  contract:
+    environment:
+    - HOST=0.0.0.0
+    - PORT=3727
+    - QUERY_PORT=3728
+    - TRANSFER_PORT=3729
+    - STORE_DIR=/store
+    - HTTP_PORT=3787
+    volumes:
+      - marlowe-contract-store:/store
+    image: ghcr.io/input-output-hk/marlowe-contract:0.0.5
     restart: unless-stopped
 
   proxy:
     environment:
     - HOST=0.0.0.0
     - PORT=3700
+    - TRACED_PORT=3701
     - TX_HOST=tx
     - TX_PORT=3723
+    - CONTRACT_HOST=contract
+    - LOAD_PORT=3727
+    - CONTRACT_QUERY_PORT=3728
+    - TRANSFER_PORT=3729
     - SYNC_HOST=sync
     - MARLOWE_SYNC_PORT=3724
     - MARLOWE_HEADER_SYNC_PORT=3725
@@ -193,19 +235,21 @@ services:
     depends_on:
       - sync
       - tx
-    image: ghcr.io/input-output-hk/marlowe-proxy:0.0.1
+      - contract
+    image: ghcr.io/input-output-hk/marlowe-proxy:0.0.5
     restart: unless-stopped
     ports:
     - 3700:3700
+    - 3701:3701
 
   web-server:
     environment:
     - PORT=3780
     - RUNTIME_HOST=proxy
-    - RUNTIME_PORT=3700
+    - RUNTIME_PORT=3701
     depends_on:
       - proxy
-    image: ghcr.io/input-output-hk/marlowe-web-server:0.0.1
+    image: ghcr.io/input-output-hk/marlowe-web-server:0.0.5
     restart: unless-stopped
     ports:
     - 3780:3780
@@ -214,6 +258,7 @@ volumes:
   node-db: null
   postgres: null
   shared: null
+  marlowe-contract-store: null
 ```
 
 Run `docker ps -a` to see a list of the running containers.
