Add edit url and added note on m1/m2

--- a/tutorials/_partials/_configure-binary-caches.mdx
+++ b/tutorials/_partials/_configure-binary-caches.mdx
@@ -9,7 +9,7 @@ An improperly configured cache will lead to lengthy compile times up to multiple
 
 :::caution
 
-macOS is not directly supported at this time. It is highly recommended to use a Linux VM instead.
+ARM-based architecture is not supported at this time. This includes Apple M1 and M2 machines.
 
 :::
 
